Solucionado el bug de nav-tabs, mejorado el contraste de los botones del header

--- a/Bootstrap(source)/custom.scss
+++ b/Bootstrap(source)/custom.scss
@@ -14,6 +14,9 @@ $theme-colors: (
 $body-bg: $primary;
 $body-color: $font;
 
+//Links
+$link-color: $secondary;
+
 //Navbar (cambiar)
 $navbar-custom-color: rgba($primary, .6);
 $navbar-custom-hover-color: rgba($primary, .8);
@@ -99,6 +102,6 @@ $yiq-text-light: $primary;
 //Buttons
 .bg-secondary {
     .btn-secondary {
-        @include button-variant($secondary, $secondary, darken($primary, 7.5%), darken($primary, 10%), darken($primary, 10%), darken($primary, 12.5%));
+        @include button-variant($secondary, $secondary, $primary, lighten($primary, 2.5%), lighten($primary, 2.5%), lighten($primary, 5%));
     }
 }
